--- a/src/App.css
+++ b/src/App.css
@@ -60,32 +60,24 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.table {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: auto auto auto auto;
+  margin-top: 40px;
+  width: 600px;
+  height: 200px;
+  border: 2px solid black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .table_column {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    border-right: 1px solid #f1356d;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+    .rows {
+      height: 100%;
+      border-bottom: 1px solid #f1356d;
+    }
