--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
 .table {
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   margin-top: 40px;
   width: 600px;
   height: 200px;
