--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,30 +1,138 @@
+button {
+    border-style: none;
+    cursor: pointer;
+}
+
 .container{
     margin: 0;
 }
 
 .top {
+    display: flex;
     margin: 0px;
     background-image: url(../img-app/Main-bg.svg);
     height: 100vh;
+    align-items: center;
 }
 
 .top_content {
-    max-width: 1200px;
     margin: 0px auto;
 }
 
 .top_content_greeting_graph {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-between;
     margin: 0 auto;
 }
 
 .top_content_greeting {
     display: flex;
+    flex-direction: column;
+    text-align: left;
+    justify-content: center;
+    margin-bottom: 36px;
+}
+
+.top_content_greeting h1{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 120%;
+    color: #1A1A2E;
+}
+
+.top_content_greeting p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+    color: #1A1A2E;
+}
+
+.top_content_btns {
+    display: flex;
+    flex-wrap: wrap;
+    width: 396px;
+    justify-content: space-between;
+
+}
+
+.top_content_btns_show {
+    display: flex;
+    width: 192px;
+    height: 51px;
+    background: #FFFFFF;
+    border: 1px solid #6C63FF;
+    box-sizing: border-box;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+}
+
+.top_content_btns_open {
+    display: flex;
+    width: 192px;
+    height: 51px;
+    background: #6C63FF;
+    border-radius: 8px;
+    color: white;
+    align-items: center;
+    justify-content: center;
 }
 
 .top_content_graph {
     display: flex;
+}
 
+.current_currency {
+    display: flex;
+    flex-direction: column;
+}
+
+.current_currency_content {
+    display: flex;
+    flex-direction: column;
+}
+
+.current_currency_title {
+    display: flex;
+    margin-top: 127px;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
+}
+
+.current_currency_title h1 {
+    margin: 0px;
+}  
+
+.current_currency_flag {
+    display: flex;
+    width: 25px;
+    height: 25px;
+    margin-left: 20px;
+    
+}  
+
+.current_currency_flag_img {
+    min-width:100%;
+    min-height:100%;
+    z-index: -1;
+    border-radius: 50px;
+}
+
+.current_currency_input {
+    display: flex;
+    margin-top: 80px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+}
+
+.current_currency_table {
+    display: flex;
+    margin-top: 20px;
+}
+
+.current_currency_graph {
+    margin: 64px auto;
 }
