--- a/src/components/TableCurrencies.module.css
+++ b/src/components/TableCurrencies.module.css
@@ -7,7 +7,7 @@
 .current_currency_table {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto;
     width: 100%;
     border-radius: 8px;
 }
