--- a/src/components/TableCurrencies.module.css
+++ b/src/components/TableCurrencies.module.css
@@ -9,7 +9,6 @@
     grid-template-rows: 1fr;
     grid-template-columns: auto auto auto auto;
     width: 100%;
-    border-radius: 8px;
 }
 
 .current_currency_table_header {
@@ -21,6 +20,19 @@
 .current_currency_table_column {
   display: flex;
   flex-direction: column;
+}
+
+.top_left {
+  border-top-left-radius: 8px;
+}
+.top_right {
+  border-top-right-radius: 8px;
+}
+.bottom_left {
+  border-bottom-left-radius: 8px;
+}
+.bottom_right {
+  border-bottom-right-radius: 8px;
 }
 
 .current_currency_table_rows {
