--- a/src/components/InfoRate.module.css
+++ b/src/components/InfoRate.module.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     text-align: left;
     justify-content: center;
-    margin-bottom: 36px;
+    margin-bottom: 24px;
 }
 
 .converter_content_greeting h1{
@@ -37,5 +37,6 @@
     font-size: 18px;
     line-height: 22px;
     color: #1A1A2E;
-    
+    margin-top: 40px;
+    margin-bottom: 0px;
 }
