--- a/src/components/Graph.css
+++ b/src/components/Graph.css
@@ -1,7 +1,7 @@
 /* @import 'https://code.highcharts.com/css/highcharts.css'; */
 
 .graph_currecies { 
-    width: 100%;
+    /* width: 100%; */
 }
 
 /**
