--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -6,7 +6,7 @@ button {
 .block_1136 {
     width: 1136px;
     margin: 0px auto;
-  }
+}
 
 .container{
     margin: 0;
@@ -171,3 +171,7 @@ button {
 
 }
   
+@media screen and (max-width: 1024px){ 
+
+    
+}
