--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -38,3 +38,10 @@
     justify-content: space-between;
     width: 90px;
 }
+
+@media screen and (max-width: 1024px){ 
+
+    .block_1136 {
+        width: 100%;
+      };
+}
